--- a/Code/ShipWorks.UI/Styles/BlueSteel/BlueSteelStyle.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/BlueSteelStyle.xaml
@@ -19,6 +19,7 @@
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/TextBlockStyle.xaml"/>
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/TextBoxStyle.xaml"/>
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/ListBoxStyle.xaml"/>
+        <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/GroupBoxStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <valueConverters:VisibleWhenEqualToParameterConverter x:Key="VisibleWhenNotEqualToParameter" Invert="true" />
