--- a/Code/ShipWorks.UI/Styles/BlueSteel/TextBlockStyle.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/TextBlockStyle.xaml
@@ -1,5 +1,10 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style TargetType="{x:Type TextBlock}">
+        <Setter Property="FontFamily" Value="/ShipWorks.OrderLookup;component/#Roboto"/>
+    </Style>
+
     <Style x:Key="StandardText" TargetType="TextBlock">
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
