--- a/Code/ShipWorks.UI/Styles/BlueSteel/BlueSteelStyle.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/BlueSteelStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:System="clr-namespace:System;assembly=mscorlib"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
     xmlns:valueConverters="clr-namespace:ShipWorks.UI.ValueConverters">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/Controls/GridStyle.xaml" />
@@ -43,7 +43,7 @@
                 <TextBlock.Visibility>
                     <Binding Converter="{StaticResource VisibleWhenNotEqualToParameter}" Path="DimensionsProfileID">
                         <Binding.ConverterParameter>
-                            <System:Int64>12</System:Int64>
+                            <system:Int64>12</system:Int64>
                         </Binding.ConverterParameter>
                     </Binding>
                 </TextBlock.Visibility>
