TP#35508: Various UI changes from demo feedback. Make all scan to ship font sizes 20 (except Ship tab panel content). Make all scan to ship backgrounds white. Line up search control with first column. Line up tabs with third column. Remove bottom border from active tab. Add border to the left of the Ship panel expanders when opened.

--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
@@ -7,7 +7,7 @@
              xmlns:ui="http://schemas.shipworks.com/ui"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
-             d:DesignHeight="800" d:DesignWidth="500" >
+             d:DesignHeight="800" d:DesignWidth="500">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -33,8 +33,7 @@
         <GroupBox Header="Scan"
                   BorderBrush="Black"
                   BorderThickness="2"
-                  FontSize="16"
-                  Background="{x:Static SystemColors.ControlBrush}">
+                  FontSize="20">
             <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
