--- a/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
@@ -12,7 +12,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/GroupBoxStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
             <DataTemplate x:Key="ItemsToScanTemplate">
                 <scanPack:ScanPackItemControl Margin="0 0 0 2"/>
             </DataTemplate>
@@ -22,13 +21,11 @@
         <GroupBox Header="Items to Scan"
                   BorderBrush="Black"
                   BorderThickness="2"
-                  FontSize="16"                  
-                  Background="{x:Static SystemColors.ControlBrush}">
+                  FontSize="20">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <ItemsControl
                 ItemsSource="{Binding ItemsToScan}"
                 ItemTemplate="{StaticResource ItemsToScanTemplate}"
-                Background="{x:Static SystemColors.ControlBrush}"
                 Margin="5"/>
             </ScrollViewer>
         </GroupBox>
