--- a/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
@@ -14,7 +14,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/GroupBoxStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
             <DataTemplate x:Key="ItemsToScanTemplate">
                 <scanPack:ScanPackItemControl Margin="0 0 0 2"/>
             </DataTemplate>
@@ -32,13 +31,11 @@
         <GroupBox Header="Packed"
                   BorderBrush="Black"
                   BorderThickness="2"
-                  FontSize="16"
-                  Background="{x:Static SystemColors.ControlBrush}">
+                  FontSize="20">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <ItemsControl
                     ItemsSource="{Binding PackedItems}"
                     ItemTemplate="{StaticResource ItemsToScanTemplate}"
-                    Background="{x:Static SystemColors.ControlBrush}"
                     Margin="5"/>
             </ScrollViewer>
         </GroupBox>
