--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -26,34 +26,35 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type TabControl}">
-                            <Grid x:Name="templateRoot" ClipToBounds="True" SnapsToDevicePixels="True" KeyboardNavigation.TabNavigation="Local">
+                            <Grid x:Name="templateRoot"
+                                  ClipToBounds="True" 
+                                  SnapsToDevicePixels="True"
+                                  KeyboardNavigation.TabNavigation="Local">
 
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="auto"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
-                                <Grid Margin="15 0">
+                                <Grid Panel.ZIndex="1">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
 
                                     <orderLookupSearchControl:OrderLookupSearchControl
-                                    Grid.Column="0"
-                                    DataContext="{Binding SearchViewModel}"
-                                    VerticalAlignment="Center"
-                                    HorizontalAlignment="Left"
-                                    Margin="0 5"
-                                    Width="650"/>
+                                        Grid.Column="0"
+                                        DataContext="{Binding SearchViewModel}"
+                                        VerticalAlignment="Center"
+                                        Margin="8 5 7 5"/>
 
-                                    <TabPanel Grid.Column="1"
+                                    <UniformGrid Grid.Column="2"
+                                          Rows="1"
                                           Background="Transparent"
                                           IsItemsHost="True"
-                                          Margin="5 0"
-                                          KeyboardNavigation.TabIndex="1"
-                                          Panel.ZIndex="1"
-                                          VerticalAlignment="Bottom"/>
+                                          Margin="8 5 9 0"
+                                          KeyboardNavigation.TabIndex="1"/>
                                 </Grid>
 
                                 <Border Grid.Column="0"
@@ -63,7 +64,8 @@
                                     Background="{TemplateBinding Background}"
                                     KeyboardNavigation.DirectionalNavigation="Contained"
                                     KeyboardNavigation.TabIndex="2"
-                                    KeyboardNavigation.TabNavigation="Local">
+                                    KeyboardNavigation.TabNavigation="Local"
+                                        Panel.ZIndex="0">
                                     <ContentPresenter x:Name="PART_SelectedContentHost" 
                                                       ContentTemplate="{TemplateBinding SelectedContentTemplate}" 
                                                       Content="{TemplateBinding SelectedContent}"
@@ -87,10 +89,10 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type TabItem}">
-                            <Grid x:Name="templateRoot" SnapsToDevicePixels="True" Height="42" Width="325">
+                            <Grid x:Name="templateRoot" SnapsToDevicePixels="True">
                                 <Border x:Name="mainBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Background="{TemplateBinding Background}" Margin="0"
-                                    CornerRadius="4 4 0 0">
-                                    <Border x:Name="innerBorder" BorderBrush="#FFACACAC" BorderThickness="1,1,1,0" Background="White" Margin="-1" Opacity="0" CornerRadius="4 4 0 0" />
+                                    CornerRadius="4 4 0 0" >
+                                    <Border x:Name="innerBorder" BorderBrush="#FFACACAC" BorderThickness="1,1,1,0" Background="White" Margin="-1" Opacity="0" CornerRadius="4 4 0 0" Panel.ZIndex="1" />
                                 </Border>
                                 <ContentPresenter x:Name="contentPresenter" 
                                                   ContentTemplate="{TemplateBinding HeaderTemplate}"
@@ -156,13 +158,13 @@
                                Visibility="{Binding SearchViewModel.ShowSearchMessage, Converter={StaticResource BoolToVis}}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
-                               FontSize="16"/>
+                               FontSize="20"/>
                 </Grid>
             </TabItem>
         </TabControl>
 
-        <Grid Grid.Row="1" Margin="5 5 20 0">
-
+        <Grid Grid.Row="1"
+              Margin="0 5 0 0">
             <Grid.Visibility>
                 <Binding Path="SelectedTab" Converter="{StaticResource VisibleWhenEqualToParameter}">
                     <Binding.ConverterParameter>
@@ -171,12 +173,12 @@
                 </Binding>
             </Grid.Visibility>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-
             <TextBlock
-                Margin="10 1 10 0"
+                Margin="8 1 4 0"
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
@@ -193,15 +195,15 @@
             </TextBlock>
 
             <Button 
-                Grid.Column="1"
+                Grid.Column="2"
+                Margin="8 0 8 0"
                 Command="{Binding SearchViewModel.CreateLabelCommand}"
                 Content="Create Label"
                 Style="{StaticResource LargePrimaryButton}"
-                Width="650"
                 Visibility="{Binding SearchViewModel.ShowCreateLabel, Converter={StaticResource BoolToVisHidden}}"
-                HorizontalAlignment="Right"
                 VerticalContentAlignment="Center"
-                FontSize="20"/>
+                FontSize="20"                
+                Width="auto"/>
         </Grid>
     </Grid>
 </UserControl>
