--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -16,12 +16,12 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
+                <ResourceDictionary Source="/ShipWorks.OrderLookup;component/ScanToShip/ScanToShipTabItem.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ui:VisibleWhenEqualToParameterConverter x:Key="VisibleWhenEqualToParameter"/>
             <ui:BooleanToVisibilityConverter x:Key="BoolToVisHidden" Invert="False" False="Hidden"/>
             <ui:BooleanToVisibilityConverter x:Key="BoolToVis"/>
-
             <Style TargetType="{x:Type TabControl}">
                 <Setter Property="Template">
                     <Setter.Value>
@@ -32,7 +32,7 @@
                                   KeyboardNavigation.TabNavigation="Local">
 
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="50"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
@@ -85,60 +85,6 @@
                 </Setter>
             </Style>
 
-            <Style TargetType="{x:Type TabItem}">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type TabItem}">
-                            <Grid x:Name="templateRoot" SnapsToDevicePixels="True">
-                                <Border x:Name="mainBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Background="{TemplateBinding Background}" Margin="0"
-                                    CornerRadius="4 4 0 0" >
-                                    <Border x:Name="innerBorder" BorderBrush="#FFACACAC" BorderThickness="1,1,1,0" Background="White" Margin="-1" Opacity="0" CornerRadius="4 4 0 0" Panel.ZIndex="1" />
-                                </Border>
-                                <ContentPresenter x:Name="contentPresenter" 
-                                                  ContentTemplate="{TemplateBinding HeaderTemplate}"
-                                                  Content="{TemplateBinding Header}"
-                                                  ContentStringFormat="{TemplateBinding HeaderStringFormat}"
-                                                  ContentSource="Header"
-                                                  Focusable="False"
-                                                  HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type ItemsControl}}}"
-                                                  Margin="{TemplateBinding Padding}"
-                                                  RecognizesAccessKey="True" 
-                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
-                                                  VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type ItemsControl}}}"
-                                                  TextBlock.FontSize="20"
-                                                  TextBlock.FontWeight="Bold"/>
-                            </Grid>
-                            <ControlTemplate.Triggers>
-
-                                <Trigger Property="IsMouseOver" Value="true">
-                                    <Setter Property="Background" TargetName="mainBorder">
-                                        <Setter.Value>
-                                            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                                                <GradientStop Color="#FFECF4FC" Offset="0"/>
-                                                <GradientStop Color="#FFDCECFC" Offset="1"/>
-                                            </LinearGradientBrush>
-                                        </Setter.Value>
-                                    </Setter>
-                                    <Setter Property="BorderBrush" TargetName="mainBorder" Value="#FF7EB4EA"/>
-                                </Trigger>
-
-                                <Trigger Property="IsEnabled" Value="false">
-                                    <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56"/>
-                                    <Setter Property="Background" TargetName="mainBorder" Value="#FFF0F0F0"/>
-                                    <Setter Property="BorderBrush" TargetName="mainBorder" Value="#FFD9D9D9"/>
-                                </Trigger>
-
-                                <Trigger Property="IsSelected" Value="true">
-                                    <Setter Property="Panel.ZIndex" Value="1"/>
-                                    <Setter Property="Margin" Value="-2,-2,-2,0"/>
-                                    <Setter Property="Opacity" TargetName="innerBorder" Value="1"/>
-                                </Trigger>
-
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -148,10 +94,14 @@
         </Grid.RowDefinitions>
         <TabControl Grid.Row="0"
                     SelectedIndex="{Binding SelectedTab}">
-            <TabItem Header="Scan">
+            <local:ScanToShipTabItem Header="Scan"
+                                     Success="{Binding IsOrderVerified}"
+                                     Error="{Binding ShowVerificationError}">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"/>
-            </TabItem>
-            <TabItem Header="Ship">
+            </local:ScanToShipTabItem>
+            <local:ScanToShipTabItem Header="Ship"
+                                     Success="{Binding IsOrderProcessed}"
+                                     Error="false">
                 <Grid>
                     <orderlookup:MainOrderLookupControl DataContext="{Binding OrderLookupViewModel}"/>
                     <TextBlock Text="{Binding SearchViewModel.SearchMessage}"
@@ -160,7 +110,7 @@
                                VerticalAlignment="Center"
                                FontSize="20"/>
                 </Grid>
-            </TabItem>
+            </local:ScanToShipTabItem>
         </TabControl>
 
         <Grid Grid.Row="1"
