TP #36000: Change the Rakuten store identifier to the Shop URL and update the name in the account settings

--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -65,7 +65,7 @@
                  Text="{Binding MarketplaceID, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="3" 
                Grid.Column="1" 
-               HorizontalAlignment="Right">Shop Name:</Label>
+               HorizontalAlignment="Right">Shop URL:</Label>
         <TextBox Grid.Row="3" 
                  Grid.Column="2"
                  Height="23"
