TP#35510: Fix verification error showing when no order was loaded.

--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -96,7 +96,7 @@
                     SelectedIndex="{Binding SelectedTab}">
             <local:ScanToShipTabItem Header="Scan"
                                      Success="{Binding IsOrderVerified}"
-                                     Error="{Binding ShowVerificationError}">
+                                     Error="{Binding ShowOrderVerificationError}">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"/>
             </local:ScanToShipTabItem>
             <local:ScanToShipTabItem Header="Ship"
